[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caroa04"
version = "0.1.0"
description = "Library to control the CAROA04 CAN-IO expander device from eletechsup."
readme = "README.rst"
authors = [
  {name = "Rodolphe Mete Soyding", email = "r.soyding@gmail.com"}
]
maintainers = [
  {name = "Rodolphe Mete Soyding", email = "r.soyding@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/supermete/caroa04/issues"
changelog = "https://github.com/supermete/caroa04/blob/master/changelog.md"
homepage = "https://github.com/supermete/caroa04"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

